frontend/staging.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
  namespace: valuable-promo-staging
spec:
  selector:
    app: frontend-depl
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
